--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.embeddedhtml": "html",
-        "socket.h": "c"
+        "socket.h": "c",
+        "unistd.h": "c"
     }
 }
